objects/WorkOrder__x.object
<CustomObject>
    <fields>
        <fullName>SAP_ServiceOrderType_c__c</fullName>
        <externalDeveloperName>SAP_ServiceOrderType__c</externalDeveloperName>
        <label>SAP Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YM01</fullName>
                    <label>YM01 - On Demand</label>
                </value>
                <value>
                    <fullName>YM02</fullName>
                    <label>YM02 - Initialized from Sales Order</label>
                </value>
                <value>
                    <fullName>YM03</fullName>
                    <label>YM03 - Repair Center</label>
                </value>
                <value>
                    <fullName>YM04</fullName>
                    <label>YM04 - Timesheet</label>
                </value>
                <value>
                    <fullName>YM05</fullName>
                    <label>YM05 - Maintenance Plan</label>
                </value>
                <value>
                    <fullName>YM06</fullName>
                    <label>YM06 - Allocated to Customer</label>
                </value>
                <value>
                    <fullName>YM07</fullName>
                    <label>YM07 - Toolkit Calibration Order</label>
                </value>
                <value>
                    <fullName>YM08</fullName>
                    <label>YM08 - Internal IB</label>
                </value>
                <value>
                    <fullName>YREF</fullName>
                    <label>YREF - Refurbish</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesOrderItem_c__c</fullName>
        <externalDeveloperName>SalesOrderItem__c</externalDeveloperName>
        <label>Sales Order Item</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrder_c__c</fullName>
        <externalDeveloperName>SalesOrder__c</externalDeveloperName>
        <label>Sales Order</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchedulingPolicy_c__c</fullName>
        <externalDeveloperName>SchedulingPolicy__c</externalDeveloperName>
        <label>Scheduling Policy</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAppointmentCount__c</fullName>
        <externalDeveloperName>ServiceAppointmentCount</externalDeveloperName>
        <label>Service Appointment Count</label>
        <precision>9</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceContractId__c</fullName>
        <externalDeveloperName>ServiceContractId</externalDeveloperName>
        <label>Service Contract ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceReportTemplateId__c</fullName>
        <externalDeveloperName>ServiceReportTemplateId</externalDeveloperName>
        <label>Service Report Layout ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceTerritoryId__c</fullName>
        <externalDeveloperName>ServiceTerritoryId</externalDeveloperName>
        <label>Territory ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SlaExitDate__c</fullName>
        <externalDeveloperName>SlaExitDate</externalDeveloperName>
        <label>Entitlement Process End Time</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SlaStartDate__c</fullName>
        <externalDeveloperName>SlaStartDate</externalDeveloperName>
        <label>Entitlement Process Start Time</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <externalDeveloperName>StartDate</externalDeveloperName>
        <label>Start Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <externalDeveloperName>State</externalDeveloperName>
        <label>State</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusCategory__c</fullName>
        <externalDeveloperName>StatusCategory</externalDeveloperName>
        <label>Status Category</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>OnHold</fullName>
                    <label>On Hold</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>CannotComplete</fullName>
                    <label>Cannot Complete</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusDurationMin_Canceled_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_Canceled__c</externalDeveloperName>
        <label>StatusDurationMin Canceled</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_CannotComplete_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_CannotComplete__c</externalDeveloperName>
        <label>StatusDurationMin CannotComplete</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_Completed_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_Completed__c</externalDeveloperName>
        <label>StatusDurationMin Completed</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_InProgress_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_InProgress__c</externalDeveloperName>
        <label>StatusDurationMin InProgress</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_New_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_New__c</externalDeveloperName>
        <label>StatusDurationMin New</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cannot Complete</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StopStartDate__c</fullName>
        <externalDeveloperName>StopStartDate</externalDeveloperName>
        <label>Stopped Since</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <externalDeveloperName>Street</externalDeveloperName>
        <label>Street</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubCategory_c__c</fullName>
        <externalDeveloperName>SubCategory__c</externalDeveloperName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
                <value>
                    <fullName>Routine Scheduled Call</fullName>
                </value>
                <value>
                    <fullName>Sales Call</fullName>
                </value>
                <value>
                    <fullName>Key Technical Meeting</fullName>
                </value>
                <value>
                    <fullName>Pre Training</fullName>
                </value>
                <value>
                    <fullName>Training New</fullName>
                </value>
                <value>
                    <fullName>Training Follow-Up</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Software updates</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>BTA 3D w/OBSERVA</fullName>
                </value>
                <value>
                    <fullName>BTA 3D OBSERVA &amp; MB</fullName>
                </value>
                <value>
                    <fullName>BTA 3D w/SELECT</fullName>
                </value>
                <value>
                    <fullName>BTA 3D SELECT &amp; MB</fullName>
                </value>
                <value>
                    <fullName>BTA 3D MYLA &amp; MB</fullName>
                </value>
                <value>
                    <fullName>BTA 3D w/MYLA</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 60/XL w/MYLA</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 60/XL w/OBSERVA</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 60/XL NO DM</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 C w/MYLA</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 C w/OBSERVA</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 C NO DM</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 AES</fullName>
                </value>
                <value>
                    <fullName>VIRTUO</fullName>
                </value>
                <value>
                    <fullName>D-COUNT 25/50</fullName>
                </value>
                <value>
                    <fullName>D-COUNT II</fullName>
                </value>
                <value>
                    <fullName>BTA 3D BME</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 C BME</fullName>
                </value>
                <value>
                    <fullName>VITEK 2 60/XL BME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <externalDeveloperName>Subject</externalDeveloperName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsidiary_c__c</fullName>
        <externalDeveloperName>Subsidiary__c</externalDeveloperName>
        <label>Subsidiary</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                    <label>001 - bioMérieux France</label>
                </value>
                <value>
                    <fullName>002</fullName>
                    <label>002 - bioMérieux Italia</label>
                </value>
                <value>
                    <fullName>003</fullName>
                    <label>003 - bioMérieux Germany</label>
                </value>
                <value>
                    <fullName>004</fullName>
                    <label>004 - bioMérieux Spain</label>
                </value>
                <value>
                    <fullName>005</fullName>
                    <label>005 - bioMérieux Belgium</label>
                </value>
                <value>
                    <fullName>006</fullName>
                    <label>006 - bioMérieux Switzerland</label>
                </value>
                <value>
                    <fullName>007</fullName>
                    <label>007 - bioMérieux United Kingdom</label>
                </value>
                <value>
                    <fullName>008</fullName>
                    <label>008 - bioMérieux Portugal</label>
                </value>
                <value>
                    <fullName>009</fullName>
                    <label>009 - bioMérieux Netherlands</label>
                </value>
                <value>
                    <fullName>010</fullName>
                    <label>010 - bioMérieux Poland</label>
                </value>
                <value>
                    <fullName>011</fullName>
                    <label>011 - bioMérieux Austria</label>
                </value>
                <value>
                    <fullName>012</fullName>
                    <label>012 - bioMérieux Greece</label>
                </value>
                <value>
                    <fullName>013</fullName>
                    <label>013 - bioMérieux Turkey</label>
                </value>
                <value>
                    <fullName>014</fullName>
                    <label>014 - bioMérieux Russia</label>
                </value>
                <value>
                    <fullName>015</fullName>
                    <label>015 - bioMérieux India</label>
                </value>
                <value>
                    <fullName>016</fullName>
                    <label>016 - bioMérieux Norway</label>
                </value>
                <value>
                    <fullName>017</fullName>
                    <label>017 - bioMérieux Denmark</label>
                </value>
                <value>
                    <fullName>018</fullName>
                    <label>018 - bioMérieux Sweden</label>
                </value>
                <value>
                    <fullName>019</fullName>
                    <label>019 - bioMérieux Finland</label>
                </value>
                <value>
                    <fullName>021</fullName>
                    <label>021 - bioMérieux United States</label>
                </value>
                <value>
                    <fullName>022</fullName>
                    <label>022 - bioMérieux Canada</label>
                </value>
                <value>
                    <fullName>023</fullName>
                    <label>023 - bioMérieux Mexico</label>
                </value>
                <value>
                    <fullName>031</fullName>
                    <label>031 – bioMérieux Japan Ltd.</label>
                </value>
                <value>
                    <fullName>032</fullName>
                    <label>032 - bioMérieux China HK</label>
                </value>
                <value>
                    <fullName>033</fullName>
                    <label>033 - bioMérieux Australia</label>
                </value>
                <value>
                    <fullName>034</fullName>
                    <label>034 - bioMérieux Korea</label>
                </value>
                <value>
                    <fullName>035</fullName>
                    <label>035 - bioMérieux Thailand</label>
                </value>
                <value>
                    <fullName>037</fullName>
                    <label>037 - bioMérieux Singapore</label>
                </value>
                <value>
                    <fullName>040</fullName>
                    <label>040 - bMx Singapore Rep Office Indonesia</label>
                </value>
                <value>
                    <fullName>041</fullName>
                    <label>041 - bioMérieux Brazil</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <externalDeveloperName>Subtotal</externalDeveloperName>
        <label>Subtotal</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SuggestedMaintenanceDate__c</fullName>
        <externalDeveloperName>SuggestedMaintenanceDate</externalDeveloperName>
        <label>Suggested Maintenance Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SyncErrors_c__c</fullName>
        <externalDeveloperName>SyncErrors__c</externalDeveloperName>
        <label>Sync Errors (OneDrive)</label>
        <length>131072</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SystemOperatingLabel_c__c</fullName>
        <externalDeveloperName>SystemOperatingLabel__c</externalDeveloperName>
        <label>System Operating Label</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TECHAccountMarket_c__c</fullName>
        <externalDeveloperName>TECHAccountMarket__c</externalDeveloperName>
        <label>TECHAccountMarket</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TECHMDErrorCode_c__c</fullName>
        <externalDeveloperName>TECHMDErrorCode__c</externalDeveloperName>
        <label>TECHMDErrorCode</label>
        <length>5</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECHMDSAPCodeGroup_c__c</fullName>
        <externalDeveloperName>TECHMDSAPCodeGroup__c</externalDeveloperName>
        <label>TECHMDSAPCodeGroup</label>
        <length>10</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECHSAPAssetNumber_c__c</fullName>
        <externalDeveloperName>TECHSAPAssetNumber__c</externalDeveloperName>
        <label>SAP Asset Number (Offline)</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECHSerialNumber_c__c</fullName>
        <externalDeveloperName>TECHSerialNumber__c</externalDeveloperName>
        <label>Serial Number (Offline)</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_CaseAssetID_c__c</fullName>
        <externalDeveloperName>TECH_CaseAssetID__c</externalDeveloperName>
        <label>TECH Case Asset ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TECH_CaseBusinessHoursId_c__c</fullName>
        <externalDeveloperName>TECH_CaseBusinessHoursId__c</externalDeveloperName>
        <label>TECH Case Business Hours Id</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TECH_CaseErrorCodeID_c__c</fullName>
        <externalDeveloperName>TECH_CaseErrorCodeID__c</externalDeveloperName>
        <label>TECH Case Error Code ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TECH_CaseFunctionalLocID_c__c</fullName>
        <externalDeveloperName>TECH_CaseFunctionalLocID__c</externalDeveloperName>
        <label>TECH Case Functional Loc ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TECH_EntitlementContractID_c__c</fullName>
        <externalDeveloperName>TECH_EntitlementContractID__c</externalDeveloperName>
        <label>TECH Entitlement Service Contract ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TECH_OneDriveFolderCreated_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>TECH_OneDriveFolderCreated__c</externalDeveloperName>
        <label>OneDrive Folder Created</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_WoTerritoryResources_c__c</fullName>
        <externalDeveloperName>TECH_WoTerritoryResources__c</externalDeveloperName>
        <label>TECH WoTerritoryResources</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <externalDeveloperName>Tax</externalDeveloperName>
        <label>Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TechCurrentUserId_c__c</fullName>
        <externalDeveloperName>TechCurrentUserId__c</externalDeveloperName>
        <label>TECH Current User Id</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tech_CatalogProfile_c__c</fullName>
        <externalDeveloperName>Tech_CatalogProfile__c</externalDeveloperName>
        <label>Tech_CatalogProfile</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tech_ParentAssetId_c__c</fullName>
        <externalDeveloperName>Tech_ParentAssetId__c</externalDeveloperName>
        <label>Tech_ParentAssetId</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tech_ParentSAPAssetNumber_c__c</fullName>
        <externalDeveloperName>Tech_ParentSAPAssetNumber__c</externalDeveloperName>
        <inlineHelpText>WO.Tech_ParentSAPAssetNumber__c with System Asset Number. Info used in WO Entitlement lookup filter to see Parent Asset Entitlement when Case is Saved (Serial number not used because only number fields can be ref in lookup filters and not text fields)</inlineHelpText>
        <label>Tech_Parent SAP Asset Number</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_RootAssetId_c__c</fullName>
        <externalDeveloperName>Tech_RootAssetId__c</externalDeveloperName>
        <label>Tech_RootAssetId</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tech_Subsidiary_c__c</fullName>
        <externalDeveloperName>Tech_Subsidiary__c</externalDeveloperName>
        <label>Tech_Subsidiary</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <externalDeveloperName>TotalPrice</externalDeveloperName>
        <label>Total Price</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UDI_DI_Code_c__c</fullName>
        <externalDeveloperName>UDI_DI_Code__c</externalDeveloperName>
        <label>UDI-DI Code</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkCenterExternalID_c__c</fullName>
        <externalDeveloperName>WorkCenterExternalID__c</externalDeveloperName>
        <label>Work Center External Id Tech ?</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkCenterPlant_c__c</fullName>
        <externalDeveloperName>WorkCenterPlant__c</externalDeveloperName>
        <label>Main Work Center Plant</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkCenter_c__c</fullName>
        <externalDeveloperName>WorkCenter__c</externalDeveloperName>
        <label>Main Work Center</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrderNumber__c</fullName>
        <externalDeveloperName>WorkOrderNumber</externalDeveloperName>
        <label>Work Order Number</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkTypeId__c</fullName>
        <externalDeveloperName>WorkTypeId</externalDeveloperName>
        <label>Work Type ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_First_Closed_Date_c__c</fullName>
        <externalDeveloperName>Work_Order_First_Closed_Date__c</externalDeveloperName>
        <label>Work Order First Closed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>doNotSendToSAP_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>doNotSendToSAP__c</externalDeveloperName>
        <label>Do not send to SAP ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>generatedFromFieldActionProcess_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>generatedFromFieldActionProcess__c</externalDeveloperName>
        <label>generated From Field Action Process</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hasDatesDefined_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>hasDatesDefined__c</externalDeveloperName>
        <label>Dates defined ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCompleted_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isCompleted__c</externalDeveloperName>
        <inlineHelpText>Checked when Work Order status is Completed</inlineHelpText>
        <label>Completed?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCorrectiveMaintenance_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isCorrectiveMaintenance__c</externalDeveloperName>
        <label>Corrective Maintenance ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCreatedOnSite_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isCreatedOnSite__c</externalDeveloperName>
        <label>Created On Site?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCustomerTraining_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isCustomerTraining__c</externalDeveloperName>
        <label>Customer Training Work Order ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isExcludedResourcesCalculated_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isExcludedResourcesCalculated__c</externalDeveloperName>
        <inlineHelpText>Use for corrective maintenance only</inlineHelpText>
        <label>Quick customer call back?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isInstallation_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isInstallation__c</externalDeveloperName>
        <label>Installation Work Order ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLate_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isLate__c</externalDeveloperName>
        <inlineHelpText>Checked if the Work Order is overdue.</inlineHelpText>
        <label>Late?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isManual_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isManual__c</externalDeveloperName>
        <label>Manually Created ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isScheduledOutsideCorporateWindow_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isScheduledOutsideCorporateWindow__c</externalDeveloperName>
        <label>Scheduled outside corporate window ?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSystemOperating_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>isSystemOperating__c</externalDeveloperName>
        <inlineHelpText>Check to display "The system is operating per manufacturing specifications" on the Service Report.</inlineHelpText>
        <label>System Operating?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <externalDataSource>BMX_EXTERNAL</externalDataSource>
    <externalName>WorkOrder</externalName>
    <label>Work Order</label>
    <pluralLabel>Work Orders</pluralLabel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>